# trustlane

./: .dockerignore  .env.example  .gitignore  .replit  Dockerfile  Procfile  README.md  SETUP_1PASSWORD.md  agent_loop.py  architecture.html  attack.py  console.py  credential_gate.py  delegation.py  demo.py  dotenv_lite.py  event_bus.py  events.py  llm_agent.py  mise.toml  mock_expedia.py  models.py  notify.py  pyproject.toml  reputation.py  requirements.txt  scenarios.py  server.py  trust_engine.py  verify_1password.py
.claude/: launch.json
console/: index.html  user.html
docs/screenshots/: README.md
tests/: test_engine.py  test_reputation.py  test_trust_engine.py
trustgate/: __init__.py  audit.py  config.py  models.py
trustgate/broker/: __init__.py  broker.py  onepassword.py
trustgate/engine/: __init__.py  policy.py  scorer.py
trustgate/signals/: __init__.py  base.py  blast_radius.py  intent_drift.py  provenance.py  velocity.py
