[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "trustgate"  # placeholder — rename when you pick a real name
version = "0.1.0"
description = "Real-time trust scoring that gates runtime credential release for agents."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
# Wire the real 1Password vault.
onepassword = ["onepassword-sdk>=0.1.0"]
# Local dev.
dev = ["pytest>=7.0", "python-dotenv>=1.0"]

[tool.setuptools.packages.find]
include = ["trustgate*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
